--- a/project.config
+++ b/project.config
@@ -1,2 +1,20 @@
 [access]
 	inheritFrom = All-Projects
+[access "refs/*"]
+	owner = group user/Sheng Yu Chiu (m943040028)
+[access "refs/for/refs/*"]
+	read = group user/Sheng Yu Chiu (m943040028)
+	push = group user/Sheng Yu Chiu (m943040028)
+	label-Code-Review = -2..+2 group user/Sheng Yu Chiu (m943040028)
+	label-Verified = -1..+1 group user/Sheng Yu Chiu (m943040028)
+	rebase = group user/Sheng Yu Chiu (m943040028)
+	removeReviewer = group user/Sheng Yu Chiu (m943040028)
+	submit = group user/Sheng Yu Chiu (m943040028)
+[access "refs/heads/*"]
+	read = group user/Sheng Yu Chiu (m943040028)
+	create = group user/Sheng Yu Chiu (m943040028)
+	push = +force group user/Sheng Yu Chiu (m943040028)
+	pushMerge = group user/Sheng Yu Chiu (m943040028)
+[access "refs/tags/*"]
+	push = group user/Sheng Yu Chiu (m943040028)
+	push = +force group user/Sheng Yu Chiu (m943040028)
