Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,12 +3,19 @@
 [access "refs/*"]
 	owner = group user/Sheng Yu Chiu (m943040028)
 [access "refs/for/refs/*"]
+	read = group OpenTrustGroup_CoreDeveloper
 	read = group user/Sheng Yu Chiu (m943040028)
+	push = group OpenTrustGroup_CoreDeveloper
 	push = group user/Sheng Yu Chiu (m943040028)
+	label-Code-Review = -2..+2 group OpenTrustGroup_CoreDeveloper
 	label-Code-Review = -2..+2 group user/Sheng Yu Chiu (m943040028)
+	label-Verified = -1..+1 group OpenTrustGroup_CoreDeveloper
 	label-Verified = -1..+1 group user/Sheng Yu Chiu (m943040028)
+	rebase = group OpenTrustGroup_CoreDeveloper
 	rebase = group user/Sheng Yu Chiu (m943040028)
+	removeReviewer = group OpenTrustGroup_CoreDeveloper
 	removeReviewer = group user/Sheng Yu Chiu (m943040028)
+	submit = group OpenTrustGroup_CoreDeveloper
 	submit = group user/Sheng Yu Chiu (m943040028)
 [access "refs/heads/*"]
 	read = group user/Sheng Yu Chiu (m943040028)
