Modified project settings

--- a/project.config
+++ b/project.config
@@ -25,3 +25,5 @@
 [access "refs/tags/*"]
 	push = group user/Sheng Yu Chiu (m943040028)
 	push = +force group user/Sheng Yu Chiu (m943040028)
+[submit]
+	action = fast forward only
