Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,6 +1,7 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
+	owner = group OpenTrustGroup_CoreDeveloper
 	owner = group user/Sheng Yu Chiu (m943040028)
 [access "refs/for/refs/*"]
 	read = group OpenTrustGroup_CoreDeveloper
